AC_INIT(src/extract.c)
AM_INIT_AUTOMAKE(nfex, 2.4)
AC_CANONICAL_HOST
AM_CONFIG_HEADER([include/config.h])

dnl CFLAGS="$CFLAGS -ggdb"
CFLAGS="$CFLAGS"

AC_PROG_CC
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_CHECK_LIB(fl, main)
AC_SEARCH_LIBS([pcap_open_live], [pcap])
AC_SEARCH_LIBS([libnet_init], [net])
AC_SEARCH_LIBS([floor], [m])
AC_SEARCH_LIBS([GeoIP_open], [GeoIP], [have_geoip=yes 
               AC_DEFINE(HAVE_GEOIP, 1, [Define if system has MaxMind GeoIP])])
AC_HEADER_STDC
		
AC_OUTPUT(Makefile src/Makefile include/version.h)
