AC_INIT(src/nfex_pp.c)
AM_INIT_AUTOMAKE(nfex_pp, 1.0)
AC_CANONICAL_HOST
AM_CONFIG_HEADER([include/config.h])

CFLAGS="$CFLAGS -ggdb"

AC_PROG_CC
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_SEARCH_LIBS([cl_init], [clamav])

AC_HEADER_STDC
		
AC_OUTPUT(Makefile src/Makefile)
