AC_INIT(src/extract.c)
AM_INIT_AUTOMAKE(nfex, 2.5)
AC_CANONICAL_HOST
AM_CONFIG_HEADER([include/config.h])

CFLAGS="$CFLAGS -ggdb"
dnl CFLAGS="$CFLAGS"

AC_PROG_CC
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_MSG_CHECKING(whether to enable debugging)
debug_default="no"
AC_ARG_ENABLE(debug, [  --enable-debug=[no/yes] turn on debugging
                       [default=$debug_default]],, enable_debug=$debug_default)
dnl Yes, shell scripts can be used
if test "x$enable_debug" = "xyes"; then
         CFLAGS="$CFLAGS -ggdb -DDEBUG_MODE"
AC_MSG_RESULT(yes)
else
AC_MSG_RESULT(no)
fi

AC_CHECK_LIB(fl, main)
AC_SEARCH_LIBS([pcap_open_live], [pcap])
AC_SEARCH_LIBS([libnet_init], [net])
AC_SEARCH_LIBS([floor], [m])
AC_SEARCH_LIBS([event_base_new], [event], [have_libevent=yes
               AC_DEFINE(HAVE_LIBEVENT, 1, [Define if system has libevent])])
AC_SEARCH_LIBS([GeoIP_open], [GeoIP], [have_geoip=yes
               AC_DEFINE(HAVE_GEOIP, 1, [Define if system has MaxMind GeoIP])])
AC_HEADER_STDC
		
AC_OUTPUT(Makefile src/Makefile include/version.h)
